nexus_repository/ns.nexus_repository.yaml
###############################################################################
##        Name: ns.nexus_repository.yaml                                      #
##        Date: 29/12/2020                                                    #
##     Version: v0.1                                                          #
## Description: File to create a namespace for:                               #
##              + owner: nexus                                                #
##              + target: kubernetes_rfd                                      #
##----------------------------------------------------------------------------#
##      Editor: José Manuel Plana Santos                                      #
##     Contact: dev.josemanuelps@gmail.com                                    #
###############################################################################



---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-nexus
  labels:
    owner: nexus
    target: kubernetes_rfd
    yaml_name: ns.nexus_repository.yaml
    yaml_version: v0.1
