nexus_repository/svc.nexus_repository.yaml
###############################################################################
##        Name: svc.nexus_repository.yaml                                     #
##        Date: 29/12/2020                                                    #
##     Version: v0.1                                                          #
## Description: File to create a service for:                                 #
##              + app: nexus_repository                                       #
##              + owner: nexus                                                #
##              + target: kubernetes_rfd                                      #
##----------------------------------------------------------------------------#
##       Ports: -> 80 === 8081                                                #
##              -> 5000 === 5000                                              #
##----------------------------------------------------------------------------#
##      Editor: José Manuel Plana Santos                                      #
##     Contact: dev.josemanuelps@gmail.com                                    #
###############################################################################



---
apiVersion: v1
kind: Service
metadata:
  name: svc-nexus
  namespace: ns-nexus
  labels:
    app: nexus_repository
    owner: nexus
    target: kubernetes_rfd
    yaml_name: svc.nexus_repository.yaml
    yaml_version: v0.1
spec:
  type: NodePort
  selector:
    app: nexus_repository
    owner: nexus
    target: kubernetes_rfd
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
    - name: docker
      port: 5000
      targetPort: 5000
      protocol: TCP
